--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>StyleGAN Vue</title>
+    <link href="/nagoya/assets/basic.css" rel="stylesheet" />
+    <link href="/nagoya/assets/font.css" rel="stylesheet" />
     <link href="/src/assets/main.css" rel="stylesheet" />
     <script type="module" src="/src/main.ts"></script>
   </head>
